# lear

./: .gitignore  README.md  pyproject.toml
dataset/: Corpus-L1.json
examples/: test.py
lear/: custom_llm.py  evaluator.py  http_rag_provider.py  metric.py  rag_provider.py  utils.py
providers/: http_rag_provider.py
