[tool.poetry]
name = "lear"
version = "0.1.0"
description = ""
authors = ["jojopdq <jojopdq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deepeval = "^1.5.8"
easydict = "^1.13"
httpx = "^0.27.2"
jsonpickle = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
